# DeskRobot

./: .env  .env.example  .gitignore  DeskRobot.py  README.md  pyproject.toml  requirements-tree.txt  requirements.txt  requirments.txt  test_static_text_fixed.py  引脚占用情况.md
SoundWireServer/: INSTALL.txt
browser-extension/: DEVELOPMENT.md  INSTALL.md  README.md  background.js  content.js  manifest.json  options.html  options.js  popup.html  popup.js  qr-parser.js
configs/: .env-example  .env_example  api_config.py  config-example.json  config.py  log_config.py  logging_config.py
data/SoundWireServer/: SoundWireServer  SoundWireServer.py
docs/: index.md
downloads/: config.py
downloads/SoundWireServer/: README.md
localfiles/: log_analyzer.py
models/: 模型下载地址.md
modules/: DataCenter.py  EventBus.py  LED_Thread.py  SharedData.py  event_bus.py  mod_ai_agent.py  mod_awak.py  mod_car_control.py  mod_face_track.py  mod_face_tracking.py  mod_game_pad.py  mod_gamepad.py  mod_io_terminal.py  mod_led.py  mod_led_control.py  mod_musi.py  mod_music_player.py  mod_oled.py  mod_oled_animation.py  mod_oled_roboeyes.py  mod_oled_test.py  mod_oled_text.py  mod_roboeyes.py  mod_stt.py  mod_tem.py  mod_temperature.py  mod_terminal_io.py  mod_text_display.py  mod_thinking_animation.py  mod_tts.py  mod_voice.py  mod_voice_awake.py  mod_voice_detect.py  mod_voice_io.py  mod_voice_stt.py  mod_voice_tts.py  mod_web_camera.py  new_face_tracking.py  new_voice_control.py  new_web_camera.py
modules/AI对话/: agent.py  main.py
modules/API_AI/: ai_api.py  requirements.txt  test_ai_api.py
modules/API_CAR/: Car.py  Servo.py  手柄测试.py
modules/API_Camera/: FaceDetect.py  FaceDetector.py  PiCamera.py  WEBAPP.py  WEBCamera.py  pi_camera_web.py  requirements.txt  usb_camera.py  web_camera_pi.py
modules/API_Car/: Car.py  Car_API.py  Car_Control.py  evdev.py  evdev_test.py
modules/API_DHT/: DHT.py
modules/API_EventBus/: __init__.py  event_bus.py
modules/API_LED/: LED.py  requirements.txt
modules/API_Music/: Music.py  Music_Player.py  requirements.txt
modules/API_OLED/: OLED_API.py  mod_oled_test.py  oled_animation_api.py  requirements.txt  roboeyes_api.py  text_scroller.py
modules/API_Roboeyes/: roboeyes.py  roboeyes_api.py
modules/API_Servo/: Servo.py  requirements.txt
modules/API_Text/: text_renderer.py  text_scroller.py
modules/API_Voice/: requirements.txt  voice_interface.py
modules/API_Wheels/: Car_API.py  Car_Control.py
scripts/: config.py  main.py  mcp_client.py  mcp_server.py  roboeyes_thread.py
test/: mcp_client.py  mcp_server.py  roboeyes_sequences.py  test_oled.py  test_piper.py  test_remote_audio.py
tools/: Ahgle.onnx  Ahgle.tflite
(+73 files in other folders)
