[project]
name = "deskrobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "colorzero==2.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "fonttools==4.57.0",
    "gpiozero==2.0.1",
    "kiwisolver==1.4.8",
    "lgpio==0.2.2.0",
    "mcp>=1.9.0",
    "openai>=1.79.0",
    "opencv-python>=4.11.0.86",
    "packaging==25.0",
    "pigpio==1.78",
    "pyparsing==3.2.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.1.0",
    "roboeyes>=0.1.0",
    "rpi-lgpio==0.6",
    "six==1.17.0",
]


[tool.uv.sources]
roboeyes = { git = "https://github.com/Xe111/Roboeyes-python" }




[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

