[project]
name = "deskrobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "adafruit-circuitpython-ssd1306",
    "colorzero",
    "contourpy",
    "cycler",
    "faster-whisper",
    "fonttools",
    "gpiozero",
    "kiwisolver",
    "langchain-community",
    "langchain-core",
    "langchain-deepseek",
    "langchain-openai",
    "langgraph",
    "lgpio",
    "opencv-python",
    "pigpio",
    "pyparsing",
    "python-dateutil",
    "python-dotenv",
    "rpi-gpio",
    "rpi-lgpio",
    "silero-vad",
    "six",
    "vosk",
    "pillow"
]




[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true

[dependency-groups]
dev = [
    "importmonkey",
]

